force-app/main/default/objects/dsalesAsignacionProveedores__c/dsalesAsignacionProveedores__c.object-meta.xml
<CustomObject>
    <description>Objeto de vinculación entre productos y proveedores</description>
    <label>Asignación de Proveedores</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Número de Asignación de proveedores</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asignación de proveedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>