force-app/main/default/objects/dsalesAsignacionProveedores__c/fields/dsalesActivo__c.field-meta.xml
<CustomField>
    <fullName>dsalesActivo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de estatus de la asignación</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>