force-app/main/default/objects/dsalesAsignacionProveedores__c/fields/dsalesProducto__c.field-meta.xml
<CustomField>
    <fullName>dsalesProducto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vinculación con registro de producto</description>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>dsalesAsignacionProveedores</relationshipName>
    <type>Lookup</type>
</CustomField>