force-app/main/default/objects/dsalesAsignacionProveedores__c/fields/dsalesProveedor__c.field-meta.xml
<CustomField>
    <fullName>dsalesProveedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vinculación con registro de proveedor</description>
    <label>Proveedor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 8) OR (3 AND 4 AND 7) OR (5 AND 6 AND 7)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Asignación por producto</value>
        </filterItems>
        <filterItems>
            <field>dsalesProveedores__c.dsalesTipoProveedor__c</field>
            <operation>equals</operation>
            <value>Seguro</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Asignación por región</value>
        </filterItems>
        <filterItems>
            <field>dsalesProveedores__c.dsalesTipoProveedor__c</field>
            <operation>equals</operation>
            <value>Servicio</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Asignación por producto</value>
        </filterItems>
        <filterItems>
            <field>dsalesProveedores__c.dsalesTipoProveedor__c</field>
            <operation>equals</operation>
            <value>Servicio</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Administrador de Instalación</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Administrador de Seguros, Administrador SC, Administrador SM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>dsalesProveedores__c</referenceTo>
    <relationshipLabel>Asignación de Proveedores</relationshipLabel>
    <relationshipName>dsalesAsignacionProveedores</relationshipName>
    <type>Lookup</type>
</CustomField>