force-app/main/default/objects/dsalesAsignacionProveedores__c/recordTypes/dsalesAsigProducto.recordType-meta.xml
<RecordType>
    <fullName>dsalesAsigProducto</fullName>
    <active>true</active>
    <label>Asignación por producto</label>
</RecordType>