force-app/main/default/objects/dsalesAsignacionProveedores__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>dsalesProducto__c</columns>
    <columns>dsalesActivo__c</columns>
    <columns>dsalesProveedor__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dsalesProveedor__c</field>
        <operation>equals</operation>
        <value>MABE</value>
    </filters>
    <label>Todos</label>
</ListView>